--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                 <div class = "col-md-6 anim-right">
                     <form>
                     <div class = "form-group">
-                            <label for="name">Your name:</label>
+                            <label for="name" class = "letter-space2">Your name:</label>
                             <input type="password" class="form-control" id="name" placeholder="Your name">
                             <span class="help-block">We can be friends ;)</span>
-                            <label for="email">Email:</label>
+                            <label for="email" class = "letter-space2">Email:</label>
                             <input type="password" class="form-control" id="email" placeholder="Your email">
                             <span class="help-block">This will help me find you</span>
-                            <label for="textarea">Your message</label>
+                            <label for="textarea" class = "letter-space2">Your message</label>
                             <textarea class="form-control" id="textarea" rows="4"></textarea>
                             <span class="help-block">Resizable</span>
                             <button type="submit" class="btn btn-success">Submit</button>
