--- a/hell/index.html
+++ b/hell/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <script src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -6,18 +7,19 @@
 </head>
 
 <body>
-    <div id = "title">
-        Polina Rubtsova
-    </div>
-    <div id = "sins">
-        <div id="donutchart" style="width: 900px; height: 500px;     background: gray;"></div>
-        <div id="donutchart2" style="width: 900px; height: 500px;"></div>
-    </div>
-    <div id = "result">
-        Keep going!
-        <br>
-        You're almost in <span style = "COLOR:red">HELL</span>
-    </div>
+<div id = "title">
+    Polina Rubtsova
+</div>
+<div id = "sins">
+    <div id="donutchart"></div>
+    <div id="donutchart2"></div>
+</div>
+<div id = "result">
+    Keep going!
+    <br>
+    You're almost in <span style = "COLOR:red">HELL</span>
+</div>
 
 
 </body>
+</html>
