--- a/lisa/index.html
+++ b/lisa/index.html
@@ -4,6 +4,7 @@
     <link href = "style.css" rel = "stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
