--- a/lisa/index.html
+++ b/lisa/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class = "text-space"></div>
                     <div class = "text-regular">
-                        <div class = "bold">мобильные приложения</div>
+                        <div class = "bold">Мобильные приложения:</div>
                         «Интерактивный промоутер»
                         <br>
                         «Бесконечная полка»
