--- a/lisa/index.html
+++ b/lisa/index.html
@@ -22,11 +22,11 @@
                     <div class = "text-space"></div>
                     <div class = "text-regular">
                         <div class = "bold">Мобильные приложения:</div>
-                        «Интерактивный промоутер»
+                        —«Интерактивный промоутер»
                         <br>
-                        «Бесконечная полка»
+                        —«Бесконечная полка»
                         <br>
-                        «Помощник продавца»
+                        —«Помощник продавца»
                         <div class = "text-space"></div>
                         <div class = "bold">Панель управления с возможностью:</div>
                         —Быстро управлять контентом, синхронизировать остатки
