--- a/lisa/index.html
+++ b/lisa/index.html
@@ -37,6 +37,9 @@
                         —Удалённо управлять устройствами
                         <br>
                         Собирать аналитику о поведении клиентов
+                        <div class = "text-space"></div>
+                        <div class = "bold">Страница платформы:</div>
+                        <a href = "facelet.com/">www.facelet.com</a>
                     </div>
                 </div>
             </div>
