--- a/lisa/index.html
+++ b/lisa/index.html
@@ -39,7 +39,7 @@
                         Собирать аналитику о поведении клиентов
                         <div class = "text-space"></div>
                         <div class = "bold">Страница платформы:</div>
-                        <a href = "facelet.com/">www.facelet.com</a>
+                        <a href = "https://www.facelet.com/ru-ua/">www.facelet.com</a>
                     </div>
                 </div>
             </div>
