--- a/lisa/index.html
+++ b/lisa/index.html
@@ -48,6 +48,39 @@
             </div>
         </div>
     </section>
+
+    <section id = "product">
+        <div class = "product_item">
+            <div class = "product_img">
+                <img src = "https://www.facelet.com/img/products/promoter.jpg">
+            </div>
+            <div class = "product_title">«Интерактивный промоутер»</div>
+            <div class = "text-space"></div>
+            <div class = "product_desc">Удобный источник информации о бренде и товарах</div>
+            <div class = "text-space"></div>
+            <a href = "https://www.facelet.com/ru-ua/products--interactive-promoter.html">Узнать больше »</a>
+        </div>
+        <div class = "product_item">
+            <div class = "product_img">
+                <img src = "https://www.facelet.com/img/products/aisle.jpg">
+            </div>
+            <div class = "product_title">«Бесконечная полка»</div>
+            <div class = "text-space"></div>
+            <div class = "product_desc">Предложите покупателям больше, чем вмещает магазин</div>
+            <div class = "text-space"></div>
+            <a href = "https://www.facelet.com/ru-ua/products--endless-aisle.html">Узнать больше »</a>
+        </div>
+        <div class = "product_item">
+            <div class = "product_img">
+                <img src = "https://www.facelet.com/img/products/assistant.png">
+            </div>
+            <div class = "product_title">«Помощник продавца»</div>
+            <div class = "text-space"></div>
+            <div class = "product_desc">Универсальный инструмент в руках продавцов-консультантов</div>
+            <div class = "text-space"></div>
+            <a href = "https://www.facelet.com/ru-ua/products--seller-assistant.html">Узнать больше »</a>
+        </div>
+    </section>
     <section>
         <div class = "row">
             <div class = "side">
