--- a/lisa/index.html
+++ b/lisa/index.html
@@ -49,55 +49,58 @@
         </div>
     </section>
 
+    <div class = "product_main">Продукты</div>
     <section id = "product">
         <div class = "product_item">
             <div class = "product_img">
-                <img src = "https://www.facelet.com/img/products/promoter.jpg">
+                <a href = "promouter.html"><img src = "https://www.facelet.com/img/products/promoter.jpg"></a>
             </div>
             <div class = "product_title">«Интерактивный промоутер»</div>
             <div class = "text-space"></div>
             <div class = "product_desc">Удобный источник информации о бренде и товарах</div>
             <div class = "text-space"></div>
-            <a href = "https://www.facelet.com/ru-ua/products--interactive-promoter.html">Узнать больше »</a>
+            <a href = "promouter.html">Узнать больше »</a>
         </div>
         <div class = "product_item">
             <div class = "product_img">
-                <img src = "https://www.facelet.com/img/products/aisle.jpg">
+                <a href = "everlasting.html"><img src = "https://www.facelet.com/img/products/aisle.jpg"></a>
             </div>
             <div class = "product_title">«Бесконечная полка»</div>
             <div class = "text-space"></div>
             <div class = "product_desc">Предложите покупателям больше, чем вмещает магазин</div>
             <div class = "text-space"></div>
-            <a href = "https://www.facelet.com/ru-ua/products--endless-aisle.html">Узнать больше »</a>
+            <a href = "everlasting.html">Узнать больше »</a>
         </div>
         <div class = "product_item">
             <div class = "product_img">
-                <img src = "https://www.facelet.com/img/products/assistant.png">
+                <a href = "help.html"><img src = "https://www.facelet.com/img/products/assistant.png"></a>
             </div>
             <div class = "product_title">«Помощник продавца»</div>
             <div class = "text-space"></div>
             <div class = "product_desc">Универсальный инструмент в руках продавцов-консультантов</div>
             <div class = "text-space"></div>
-            <a href = "https://www.facelet.com/ru-ua/products--seller-assistant.html">Узнать больше »</a>
+            <a href = "help.html">Узнать больше »</a>
         </div>
     </section>
     <section>
         <div class = "row">
             <div class = "side">
                 <div class = "description">
-                    <span>ПАНЕЛЬ УПРАВЛЕНИЯ</span>
-                    <div class = "text-regular">
-                        <div class = "text-space"></div>
-                        <div class = "bold">БЫСТРОЕ УПРАВЛЕНИЕ КОНТЕНТОМ ВО ВСЕХ ПРОДУКТАХ FACELET</div>
-                        <div class = "text-space"></div>
-                        —Интеграция и синхронизация каталога товаров
-                        из интернет-магазина, учётной системы или .xml-файла
-                        <br>
-                        —Синхронизация цен, остатков и информации о наличии
-                        <br>
-                        —Добавление медиа-контента, включая тексты, изображения и видео
-                        <br>
-                        —Функциональный и удобный конструктор интерактивных экранов с виджетами
+                    <div class = "col-center">
+                        <span>ПАНЕЛЬ УПРАВЛЕНИЯ</span>
+                        <div class = "text-regular">
+                            <div class = "text-space"></div>
+                            <div class = "bold">БЫСТРОЕ УПРАВЛЕНИЕ КОНТЕНТОМ ВО ВСЕХ ПРОДУКТАХ FACELET</div>
+                            <div class = "text-space"></div>
+                            —Интеграция и синхронизация каталога товаров
+                            из интернет-магазина, учётной системы или .xml-файла
+                            <br>
+                            —Синхронизация цен, остатков и информации о наличии
+                            <br>
+                            —Добавление медиа-контента, включая тексты, изображения и видео
+                            <br>
+                            —Функциональный и удобный конструктор интерактивных экранов с виджетами
+                        </div>
                     </div>
                 </div>
             </div>
