--- a/lisa/everlasting.html
+++ b/lisa/everlasting.html
@@ -14,7 +14,8 @@
             <div class = "description">
                 <div class = "col-center">
                     <div class = "text-regular">
-                        Предложите покупателям больше, чем вмещает ваша торговая точка. С помощью приложения для планшета представляйте товары, которых нет в магазине и зарабатывайте больше с квадратного метра.                 </div>
+                        Предложите покупателям больше, чем вмещает ваша торговая точка. С помощью приложения для планшета представляйте товары, которых нет в магазине и зарабатывайте больше с квадратного метра.                    </div>
+                </div>
             </div>
         </div>
         <div class = "side">
