--- a/lisa/index.html
+++ b/lisa/index.html
@@ -83,11 +83,11 @@
         </div>
     </section>
     <section>
+	<div class = "header-title"><span>ПАНЕЛЬ УПРАВЛЕНИЯ</span></div>
         <div class = "row">
             <div class = "side">
                 <div class = "description">
                     <div class = "col-center">
-                        <span>ПАНЕЛЬ УПРАВЛЕНИЯ</span>
                         <div class = "text-regular">
                             <div class = "text-space"></div>
                             <div class = "bold">БЫСТРОЕ УПРАВЛЕНИЕ КОНТЕНТОМ ВО ВСЕХ ПРОДУКТАХ FACELET</div>
