--- a/lisa/promouter.html
+++ b/lisa/promouter.html
@@ -14,7 +14,22 @@
                 <div class = "description">
                     <div class = "col-center">
                         <div class = "text-regular">
-                            Представьте ваш бренд и товары в интерактивной форме. Приложение для планшета повышает видимость бренда в торговых точках, эмоционально вовлекает клиента и позволяет собирать обратную связь с помощью опросов.
+                            <div class = "bold">Установите «Интерактивный промоутер» Facelet и показывайте вашим клиентам:</div>
+                            <ul>
+                                <li>Интерактивные опросы</li>
+                                <li>Промо-заставки и видео</li>
+                                <li>Информацию об акциях</li>
+                            </ul>
+                            <div class = "bold">Привлекайте клиентов удобными функциями:</div>
+                            <ul>
+                                <li>Отправка информации о товаре на электронную почту</li>
+                                <li>Интеграция с локационными маячками</li>
+                            </ul>
+                            <div class = "bold">Легко управляйте контентом:</div>
+                            <ul>
+                                <li>Множество вариантов отображения товаров и медиа-материалов</li>
+                                <li>Настройка цветовых схем, шрифтов и элементов управления</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
