--- a/lisa/everlasting.html
+++ b/lisa/everlasting.html
@@ -14,7 +14,27 @@
             <div class = "description">
                 <div class = "col-center">
                     <div class = "text-regular">
-                        Предложите покупателям больше, чем вмещает ваша торговая точка. С помощью приложения для планшета представляйте товары, которых нет в магазине и зарабатывайте больше с квадратного метра.                    </div>
+                        <div class = "bold">Установите «Бесконечную полку» Facelet в вашей торговой точке и показывайте:</div>
+                        <ul>
+                            <li>Товары, которых нет в магазине</li>
+                            <li>Варианты товаров (цвет, материал, размер)</li>
+                            <li>Дополнительную информацию (фото, видео, отзывы)</li>
+                            <li>Рекомендации аксессуаров, услуг и похожих товаров</li>
+                        </ul>
+                        <div class = "bold">Удерживайте покупателей с помощью дополнительных услуг:</div>
+                        <ul>
+                            <li>Заказ товаров с доставкой на дом, в магазин или на склад курьерской службы</li>
+                            <li>Отправка информации о товаре на электронную почту</li>
+                        </ul>
+                        <div class = "bold">Легко управляйте контентом:</div>
+                        <ul>
+                            <li>Добавление неограниченного количества товаров</li>
+                            <li>Импорт товаров из Yandex Market, Google Shopping и Shopify</li>
+                            <li>Импорт акционных товаров с перечёркнутой ценой</li>
+                            <li>Множество вариантов отображения товаров и медиа-материалов</li>
+                            <li>Настройка цветовых схем, шрифтов и элементов управления</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
