--- a/lisa/help.html
+++ b/lisa/help.html
@@ -14,7 +14,34 @@
             <div class = "description">
                 <div class = "col-center">
                     <div class = "text-regular">
-                        Мобильное приложение обеспечивает ваших продавцов-консультантов исчерпывающей информацией о товарах в магазине и на складе. Ускоряет работу с клиентами и помогает найти персонализированный подход к каждому.                     </div>
+                        <div class = "bold">Повысьте эффективность работы консультантов:</div>
+                        <ul>
+                            <li>Поиск товара (по названию, артикулу или штрих-коду)</li>
+                            <li>Полная информация о товаре (фото, видео, характеристики, отзывы)</li>
+                            <li>Просмотр остатков (на складе или другом магазине)</li>
+                            <li>Перемещение товаров</li>
+                            <li>Рекомендации (аксессуары, услуги и похожие товары)</li>
+                        </ul>
+                        <div class = "bold">Предлагайте оформление заказов на месте:</div>
+                        <ul>
+                            <li>Формирование заказа и передача его в кассу</li>
+                            <li>Принятие оплаты банковской картой</li>
+                            <li>Оформление возврата товара</li>
+                        </ul>
+                        <div class = "bold">Дайте консультантам больше возможностей для работы с покупателями:</div>
+                        <ul>
+                            <li>Получение информации о клиенте</li>
+                            <li>Запись клиента в список ожидания</li>
+                            <li>Добавление товара в список желаний клиента</li>
+                            <li>Отправка писем или сообщений с рекомендациями</li>
+                        </ul>
+                        <div class = "bold">Улучшайте коммуникации с консультантами:</div>
+                        <ul>
+                            <li>Общение между продавцами и менеджерами через внутренний чат</li>
+                            <li>Постановка задач от руководства</li>
+                            <li>Удобная передача распоряжений в магазины</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
