--- a/lisa/index.html
+++ b/lisa/index.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section>
-	<div class = "header-title"><span>ПАНЕЛЬ УПРАВЛЕНИЯ</span></div>
+        <div class = "product_main">Панель управления</div>
         <div class = "row">
             <div class = "side">
                 <div class = "description">
