--- a/lisa/everlasting.html
+++ b/lisa/everlasting.html
@@ -11,6 +11,13 @@
 <section>
     <div class = "row">
         <div class = "side">
+            <div class = "img-slider">
+                <div class = "tablet">
+                    <img src = "https://www.facelet.com/img/products/aisle1.jpg" class = "product-img">
+                </div>
+            </div>
+        </div>
+        <div class = "side">
             <div class = "description">
                 <div class = "col-center">
                     <div class = "text-regular">
@@ -21,11 +28,45 @@
                             <li>Дополнительную информацию (фото, видео, отзывы)</li>
                             <li>Рекомендации аксессуаров, услуг и похожих товаров</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class = "row reverse">
+        <div class = "side">
+            <div class = "description">
+                <div class = "col-center">
+                    <div class = "text-regular">
                         <div class = "bold">Удерживайте покупателей с помощью дополнительных услуг:</div>
                         <ul>
                             <li>Заказ товаров с доставкой на дом, в магазин или на склад курьерской службы</li>
                             <li>Отправка информации о товаре на электронную почту</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class = "side">
+            <div class = "img-slider">
+                <div class = "tablet">
+                    <img src = "https://www.facelet.com/img/products/aisle2.png" class = "product-img">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class = "row">
+        <div class = "side">
+            <div class = "img-slider">
+                <div class = "tablet">
+                    <img src = "https://www.facelet.com/img/products/aisle3.jpg" class = "product-img">
+                </div>
+            </div>
+        </div>
+        <div class = "side">
+            <div class = "description">
+                <div class = "col-center">
+                    <div class = "text-regular">
                         <div class = "bold">Легко управляйте контентом:</div>
                         <ul>
                             <li>Добавление неограниченного количества товаров</li>
@@ -36,11 +77,6 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class = "side">
-            <div class = "img-slider">
-                <img src = "https://www.facelet.com/img/products/aisle.jpg" class = "product-img">
             </div>
         </div>
     </div>
