--- a/lisa/help.html
+++ b/lisa/help.html
@@ -11,6 +11,13 @@
 <section>
     <div class = "row">
         <div class = "side">
+            <div class = "img-slider">
+                <div class = "phone">
+                    <span class = "phone__top"></span>
+                    <img src = "https://www.facelet.com/img/products/assistant1.png" class = "product-img">
+                </div></div>
+        </div>
+        <div class = "side">
             <div class = "description">
                 <div class = "col-center">
                     <div class = "text-regular">
@@ -22,12 +29,50 @@
                             <li>Перемещение товаров</li>
                             <li>Рекомендации (аксессуары, услуги и похожие товары)</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class = "row reverse">
+        <div class = "side">
+            <div class = "description">
+                <div class = "col-center">
+                    <div class = "text-regular">
                         <div class = "bold">Предлагайте оформление заказов на месте:</div>
                         <ul>
                             <li>Формирование заказа и передача его в кассу</li>
                             <li>Принятие оплаты банковской картой</li>
                             <li>Оформление возврата товара</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class = "side">
+            <div class = "img-slider">
+                <div class = "phone">
+                    <span class = "phone__top"></span>
+                    <img src = "https://www.facelet.com/img/products/assistant2.png" class = "product-img">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class = "row">
+        <div class = "side">
+            <div class = "img-slider">
+                <div class = "phone">
+                    <span class = "phone__top"></span>
+                    <img src = "https://www.facelet.com/img/products/assistant3.png" class = "product-img">
+                </div>
+            </div>
+        </div>
+        <div class = "side">
+            <div class = "description">
+                <div class = "col-center">
+                    <div class = "text-regular">
                         <div class = "bold">Дайте консультантам больше возможностей для работы с покупателями:</div>
                         <ul>
                             <li>Получение информации о клиенте</li>
@@ -35,7 +80,18 @@
                             <li>Добавление товара в список желаний клиента</li>
                             <li>Отправка писем или сообщений с рекомендациями</li>
                         </ul>
-                        <div class = "bold">Улучшайте коммуникации с консультантами:</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class = "row reverse">
+        <div class = "side">
+            <div class = "description">
+                <div class = "col-center">
+                    <div class = "text-regular">
+                        <div class = "bold">Дайте консультантам больше возможностей для работы с покупателями:</div>
                         <ul>
                             <li>Общение между продавцами и менеджерами через внутренний чат</li>
                             <li>Постановка задач от руководства</li>
@@ -47,7 +103,10 @@
         </div>
         <div class = "side">
             <div class = "img-slider">
-                <img src = "https://www.facelet.com/img/products/assistant.png" class = "product-img">
+                <div class = "phone">
+                    <span class = "phone__top"></span>
+                    <img src = "https://www.facelet.com/img/products/assistant4.png" class = "product-img">
+                </div>
             </div>
         </div>
     </div>
