--- a/lisa/promouter.html
+++ b/lisa/promouter.html
@@ -11,6 +11,13 @@
     <section>
         <div class = "row">
             <div class = "side">
+                <div class = "img-slider">
+                    <div class = "tablet">
+                        <img src = "https://www.facelet.com/img/products/promoter1.png" class = "product-img">
+                    </div>
+                </div>
+            </div>
+            <div class = "side">
                 <div class = "description">
                     <div class = "col-center">
                         <div class = "text-regular">
@@ -20,15 +27,21 @@
                                 <li>Промо-заставки и видео</li>
                                 <li>Информацию об акциях</li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class = "row reverse">
+            <div class = "side">
+                <div class = "description">
+                    <div class = "col-center">
+                        <div class = "text-regular">
                             <div class = "bold">Привлекайте клиентов удобными функциями:</div>
                             <ul>
                                 <li>Отправка информации о товаре на электронную почту</li>
                                 <li>Интеграция с локационными маячками</li>
-                            </ul>
-                            <div class = "bold">Легко управляйте контентом:</div>
-                            <ul>
-                                <li>Множество вариантов отображения товаров и медиа-материалов</li>
-                                <li>Настройка цветовых схем, шрифтов и элементов управления</li>
                             </ul>
                         </div>
                     </div>
@@ -36,7 +49,32 @@
             </div>
             <div class = "side">
                 <div class = "img-slider">
-                    <img src = "https://www.facelet.com/img/products/promoter.jpg" class = "product-img">
+                    <div class = "tablet">
+                        <img src = "https://www.facelet.com/img/products/promoter2.png" class = "product-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class = "row">
+            <div class = "side">
+                <div class = "img-slider">
+                    <div class = 'tablet'>
+                        <img src = "https://www.facelet.com/img/products/promoter3.jpg" class = "product-img">
+                    </div>
+                </div>
+            </div>
+            <div class = "side">
+                <div class = "description">
+                    <div class = "col-center">
+                        <div class = "text-regular">
+                            <div class = "bold">Легко управляйте контентом:</div>
+                            <ul>
+                                <li>Множество вариантов отображения товаров и медиа-материалов</li>
+                                <li>Настройка цветовых схем, шрифтов и элементов управления</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
