--- a/lisa/index.html
+++ b/lisa/index.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section>
-        <div class = "product_main">Панель управления</div>
+        <div class = "product_main" style="margin-bottom: 0; margin-top: 80px;">Панель управления</div>
         <div class = "row">
             <div class = "side">
                 <div class = "description">
@@ -92,14 +92,12 @@
                             <div class = "text-space"></div>
                             <div class = "bold">БЫСТРОЕ УПРАВЛЕНИЕ КОНТЕНТОМ ВО ВСЕХ ПРОДУКТАХ FACELET</div>
                             <div class = "text-space"></div>
-                            —Интеграция и синхронизация каталога товаров
-                            из интернет-магазина, учётной системы или .xml-файла
-                            <br>
-                            —Синхронизация цен, остатков и информации о наличии
-                            <br>
-                            —Добавление медиа-контента, включая тексты, изображения и видео
-                            <br>
-                            —Функциональный и удобный конструктор интерактивных экранов с виджетами
+                            <ul>
+                                <li>Интеграция и синхронизация каталога товаров из интернет-магазина, учётной системы или .xml-файла</li>
+                                <li>Синхронизация цен, остатков и информации о наличии</li>
+                                <li>Добавление медиа-контента, включая тексты, изображения и видео</li>
+                                <li>Функциональный и удобный конструктор интерактивных экранов с виджетами</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -126,11 +124,11 @@
                         <div class = "bold">НАСТРОЙКА ОФОРМЛЕНИЯ УСТРОЙСТВ</div>
                         <div class = "text-space"></div>
                         <div class = "text-regular">
-                            —Настраиваемые темы отображения
-                            <br>
-                            —Настройка цветовых схем для соответствия вашему фирменному стилю
-                            <br>
-                            —Выбор визуального стиля активных кнопок
+                            <ul>
+                                <li>Настраиваемые темы отображения</li>
+                                <li>Настройка цветовых схем для соответствия вашему фирменному стилю</li>
+                                <li>Выбор визуального стиля активных кнопок</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -157,11 +155,11 @@
                         <div class = "bold">УДАЛЁННОЕ УПРАВЛЕНИЕ УСТРОЙСТВАМИ</div>
                         <div class = "text-space"></div>
                         <div class = "text-regular">
-                            —Просмотр экранов устройств в реальном времени
-                            <br>
-                            —Уведомления о проблемах в работе устройств
-                            <br>
-                            —Удалённое изменение контента с моментальным обновлением на устройствах
+                            <ul>
+                                <li>Просмотр экранов устройств в реальном времени</li>
+                                <li>Уведомления о проблемах в работе устройств</li>
+                                <li>Удалённое изменение контента с моментальным обновлением на устройства</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -188,17 +186,14 @@
                         <div class = "bold">ПОДРОБНАЯ АНАЛИТИКА ВЗАИМОДЕЙСТВИЯ ПОКУПАТЕЛЕЙ С УСТРОЙСТВАМИ</div>
                         <div class = "text-space"></div>
                         <div class = "text-regular">
-                            —Какие товары вызывают больше интереса
-                            <br>
-                            —Что ищут посетители в магазинах города
-                            <br>
-                            —Какой охват у промо-контента
-                            <br>
-                            —Чем интересуются в определённых точках
-                            <br>
-                            —В какое время были проблемы с работой устройств
-                            <br>
-                            —В чью смену чаще оформляются заказы на устройстве
+                            <ul>
+                                <li>Какие товары вызывают больше интереса</li>
+                                <li>Что ищут посетители в магазинах города</li>
+                                <li>Какой охват у промо-контента</li>
+                                <li>Чем интересуются в определённых точках</li>
+                                <li>В какое время были проблемы с работой устройств</li>
+                                <li>В чью смену чаще оформляются заказы на устройстве</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
