--- a/lisa/index.html
+++ b/lisa/index.html
@@ -12,6 +12,7 @@
         <div class = "row">
             <div class = "side">
                 <div class = "description">
+                    <!-- ДИМА СДЕЛАЙ БУЛЕТЫ -->
                     <h1>платформа facelet</h1>
                     <div class = "text-regular">
                         Облачная платформа Facelet – это готовые цифровые решения
@@ -22,21 +23,19 @@
                     <div class = "text-space"></div>
                     <div class = "text-regular">
                         <div class = "bold">Мобильные приложения:</div>
-                        —«Интерактивный промоутер»
-                        <br>
-                        —«Бесконечная полка»
-                        <br>
-                        —«Помощник продавца»
+                        <ul>
+                            <li>«Интерактивный промоутер»</li>
+                            <li>«Бесконечная полка»</li>
+                            <li>«Помощник продавца»</li>
+                        </ul>
                         <div class = "text-space"></div>
                         <div class = "bold">Панель управления с возможностью:</div>
-                        —Быстро управлять контентом, синхронизировать остатки
-                        и добавлять медиа-материалы
-                        <br>
-                        —Настраивать отображение товаров, добавлять изображения и видео
-                        <br>
-                        —Удалённо управлять устройствами
-                        <br>
-                        Собирать аналитику о поведении клиентов
+                        <ul>
+                            <li>Быстро управлять контентом, синхронизировать остатки и добавлять медиа-материалы</li>
+                            <li>Настраивать отображение товаров, добавлять изображения и видео</li>
+                            <li>Удалённо управлять устройствами</li>
+                            <li>Собирать аналитику о поведении клиентов</li>
+                        </ul>
                         <div class = "text-space"></div>
                         <div class = "bold">Страница платформы:</div>
                         <a href = "https://www.facelet.com/ru-ua/">www.facelet.com</a>
