--- a/lisa/promouter.html
+++ b/lisa/promouter.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href = "style.css" rel = "stylesheet">
 </head>
-<body class = "product-body">
+<body class = "product-body" id = "promouter">
     <header class = "header-title">
         Интерактивный промоутер
     </header>
