--- a/lisa/index.html
+++ b/lisa/index.html
@@ -81,6 +81,7 @@
             <a href = "help.html">Узнать больше »</a>
         </div>
     </section>
+	<!-- ПОМЕНЯЙ ШРИФТ -->
     <section>
         <div class = "product_main" style="margin-bottom: 0; margin-top: 80px;">Панель управления</div>
         <div class = "row">
