--- a/Button_Clicker/index.html
+++ b/Button_Clicker/index.html
@@ -10,6 +10,7 @@
     <link href = "css/font-awesome.min.css" rel = "stylesheet">
     <!-- js -->
     <script src = "js/jquery-3.2.1.min.js"></script>
+    <script src = "js/globals.js"></script>
     <script src = "js/field.js"></script>
     <script src = "js/upgrade.js"></script>
 </head>
@@ -23,7 +24,7 @@
                     + <span class = "up_d">1</span> <i class = "fa fa-gavel"></i>
                 </div>
                 <span class = "upgrade_life">
-                    <span class = "up_l">5</span>
+                    <span class = "up_l">30</span>
                     <i class = "fa fa-heart"></i>
                 </span>
                 <span class = "upgrade_cost">
@@ -37,7 +38,7 @@
                     + <span class = "up_d">5</span> <i class = "fa fa-gavel"></i>
                 </div>
                 <span class = "upgrade_life">
-                    <span class = "up_l">15</span>
+                    <span class = "up_l">35</span>
                     <i class = "fa fa-heart"></i>
                 </span>
                 <span class = "upgrade_cost">
@@ -47,14 +48,92 @@
 
             <div class = "upgrade_item up_damage">
                 <div class = "upgrade_stat">
-                    + <span class = "up_d">20</span> <i class = "fa fa-gavel"></i>
+                    + <span class = "up_d">15</span> <i class = "fa fa-gavel"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">50</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">250</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_damage">
+                <div class = "upgrade_stat">
+                    + <span class = "up_d">50</span> <i class = "fa fa-gavel"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">20</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">600</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_damage">
+                <div class = "upgrade_stat">
+                    + <span class = "up_d">100</span> <i class = "fa fa-gavel"></i>
                 </div>
                 <span class = "upgrade_life">
                     <span class = "up_l">25</span>
                     <i class = "fa fa-heart"></i>
                 </span>
                 <span class = "upgrade_cost">
-                    <span class = "up_c">1000</span> <i class = "fa fa-money"></i>
+                    <span class = "up_c">1100</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_forward">
+                <div class = "upgrade_stat">
+                    + <span class = "up_f">1</span> <i class = "fa fa-forward"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">1</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">7000</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_damage">
+                <div class = "upgrade_stat">
+                    + <span class = "up_d">300</span> <i class = "fa fa-gavel"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">20</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">10000</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_damage">
+                <div class = "upgrade_stat">
+                    + <span class = "up_d">600</span> <i class = "fa fa-gavel"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">20</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">15000</span> <i class = "fa fa-money"></i>
+                </span>
+            </div>
+
+            <div class = "upgrade_item up_forward">
+                <div class = "upgrade_stat">
+                    + <span class = "up_f">1</span> <i class = "fa fa-forward"></i>
+                </div>
+                <span class = "upgrade_life">
+                    <span class = "up_l">1</span>
+                    <i class = "fa fa-heart"></i>
+                </span>
+                <span class = "upgrade_cost">
+                    <span class = "up_c">30000</span> <i class = "fa fa-money"></i>
                 </span>
             </div>
         </div>
@@ -73,16 +152,30 @@
                 <i class = "fa fa-money" title = "Деньги"></i> <span id = "stat_money"> 0 </span>
             </div>
             <div class = "stat_item">
-                <i class = "fa fa-optin-monster" title = "Убито монстров"></i> <span id = "stat_monster"> 0 </span>
+                <i class = "fa fa-optin-monster" title = "Убито фигур)"></i> <span id = "stat_monster"> 0 </span>
             </div>
             <div class = "stat_item">
                 <i class = "fa fa-gavel" title = "Урон"></i> <span id = "stat_damage"> 1 </span>
             </div>
             <div class = "stat_item">
-                <i class = "fa fa-forward" title = "Множитель денег"></i> <span id = "stat_factor"> 0 </span>
+                <i class = "fa fa-forward" title = "Множитель"></i> <span id = "stat_factor"> 0 </span>
+            </div>
+            <div class = "stat_item">
+                <i class = "fa fa-trophy" title = "Пройдено игр"></i> <span id = "stat_trophy"> 0 </span>
+            </div>
+
+            <div class = "stat_item">
+                <div id = "trophy">
+                    <i class = "fa fa-trophy"></i>
+                </div>
             </div>
         </div>
+    </div>
 
+    <div id = "dialog">
+        Игра начнется заново, но множитель останется и увеличится на 1
+        <div id = "dialog_yes" class = "dialog_button">Вперед!</div>
+        <div id = "dialog_no" class = "dialog_button">Нет</div>
     </div>
 </body>
 
