--- a/Button_Clicker/index.html
+++ b/Button_Clicker/index.html
@@ -173,7 +173,7 @@
     </div>
 
     <div id = "dialog">
-        Игра начнется заново, но множитель останется и увеличится на 1
+        <div>Игра начнется заново, но множитель останется и увеличится на 1</div>
         <div id = "dialog_yes" class = "dialog_button">Вперед!</div>
         <div id = "dialog_no" class = "dialog_button">Нет</div>
     </div>
