--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -1,167 +1,226 @@
 <html>
-<head>
-    <!-- Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Fonts (Cursive, Awesome, OpenSans) -->
-    <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <!-- Styles -->
-    <link href = "css/flex.css" rel = "stylesheet">
-    <link href = "css/main.css" rel = "stylesheet">
-    <link href = "css/logo.css" rel = "stylesheet">
-    <link href = "css/nav.css" rel = "stylesheet">
-    <link href = "css/skills.css" rel = "stylesheet">
-    <link href = "css/about.css" rel = "stylesheet">
-    <link href = "css/contact.css" rel = "stylesheet">
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+        <link href = "css/slick.css" rel = "stylesheet">
+        <link href = "css/flex.css" rel = "stylesheet">
+        <link href = "css/main.css" rel = "stylesheet">
+        <link href = "css/nav.css" rel = "stylesheet">
+        <link href = "css/header.css" rel = "stylesheet">
+        <link href = "css/services.css" rel = "stylesheet">
+        <link href = "css/about.css" rel = "stylesheet">
+        <link href = "css/portfolio.css" rel = "stylesheet">
+        <link href = "css/freelance.css" rel = "stylesheet">
+        <link href = "css/contact.css" rel = "stylesheet">
+        <link href = "css/footer.css" rel = "stylesheet">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="js/slick.min.js"></script>
+        <script src="js/smoth.js"></script>
+        <script src="js/custom.js"></script>
+    </head>
+    <body>
 
-<body>
-    <div id = "background-first">
-
+    <div class = "loading d-flex ai-center jc-center">
+        <img src = "img/loading.gif">
     </div>
-    <nav class = "d-flex jc-around container  ai-center" id = "nav">
-        <div class = "logo">
-            <i class = "fa fa-code icon-24"></i> Poleha
-        </div>
-        <div class = "d-flex flex-row">
-            <div class = "nav-item">Skills</div>
-            <div class = "nav-item">About me</div>
-            <div class = "nav-item">Portfolio</div>
-            <div class = "nav-item">Contacts</div>
+
+    <div class = "background"></div>
+
+    <nav class = "d-flex">
+        <div class = "nav-menu d-flex flex-row">
+            <div class = "nav-item"><a href = "#header">Home</a></div>
+            <div class = "nav-item"><a href = "#portfolio">Portfolio</a></div>
+            <div class = "nav-item"><a href = "#about">About me</a></div>
+            <div class = "nav-item"><a href = "#contact">Contact</a></div>
         </div>
     </nav>
 
-    <section id = "main" class = "d-flex ai-center jc-center flex-col container">
-        <div class = "logo-title">
-            «Web-designer»
+    <header class = "container-fluid d-flex jc-center ai-center flex-col" id = "header">
+        <div class = "header-name">
+            Polina Rubtsova
         </div>
-        <div class = "logo-desc">
-            Developing website design
+        <div class = "header-desc">
+            Ux/Ui Designer
         </div>
-        <div class = "logo-btn text-uppercase">
-            Contact me
-        </div>
-    </section>
+    </header>
 
-    <div id = "color-changer">
-        <div class = "color c1">
-            <div class = "c-item">
-                #FF6D00
+    <section id = "services" class = "container-fluid">
+        <div class = "container d-flex flex-row ai-center jc-around">
+            <div class = "col-services-title d-flex jc-center as-stretch">
+                <div class = "as-center">
+                    Services
+                </div>
             </div>
-        </div>
-        <div class = "color c2">
-            <div class = "c-item">
-                #FF9100
-            </div>
-        </div>
-        <div class = "color c3">
-            <div class = "c-item">
-                #D50000
-            </div>
-        </div>
-        <div class = "color c4">
-            <div class = "c-item">
-                #DD2C00
-            </div>
-        </div>
-        <div class = "color c5">
-            <div class = "c-item">
-                #00B8D4
-            </div>
-        </div>
-        <div class = "color c6">
-            <div class = "c-item">
-                #49BF73
-            </div>
-        </div>
-        <div class = "color c7">
-            <div class = "c-item">
-                #8f8f8f
-            </div>
-        </div>
-    </div>
+            <div class = "col-services-main d-flex flex-wrap jc-around">
 
-    <section id = "skills">
-        <div class = "skills-title">Skills</div>
-        <div class = "skills-container d-flex flex-row flex-wrap ai-center jc-center">
-            <div class = "skill-item">
-                <div class = "skill-img">
-                    <img src = "img/photoshop.png">
+                <div class = "service-item">
+                    <div class = "service-title">
+                        Unique Design
+                    </div>
+                    <div class = "service-desc">
+                        The best way to excel over other projects is to make your site unique and creative.
+                    </div>
                 </div>
-                <div class = "skill-title">
-                    Photoshop
+
+                <div class = "service-item">
+                    <div class = "service-title">
+                        Well Documented
+                    </div>
+                    <div class = "service-desc">
+                        The best way to excel over other projects is to make your site unique and creative.
+                    </div>
                 </div>
-                <div class = "skill-desc">
-                    I can this ;) , I've fucked that
-                    I've even fucked a school girl's twat
+
+                <div class = "service-item">
+                    <div class = "service-title">
+                        Devolopment
+                    </div>
+                    <div class = "service-desc">
+                        The best way to excel over other projects is to make your site unique and creative.
+                    </div>
                 </div>
-            </div>
-            <div class = "skill-item">
-                <div class = "skill-img">
-                    <img src = "img/photoshop.png">
-                </div>
-                <div class = "skill-title">
-                    Photoshop
-                </div>
-                <div class = "skill-desc">
-                    I can this ;) , I've fucked that
-                    I've even fucked a school girl's twat
-                </div>
-            </div>
-            <div class = "skill-item">
-                <div class = "skill-img">
-                    <img src = "img/photoshop.png">
-                </div>
-                <div class = "skill-title">
-                    Photoshop
-                </div>
-                <div class = "skill-desc">
-                    I can this ;) , I've fucked that
-                    I've even fucked a school girl's twat
-                </div>
-            </div>
-            <div class = "skill-item">
-                <div class = "skill-img">
-                    <img src = "img/photoshop.png">
-                </div>
-                <div class = "skill-title">
-                    Photoshop
-                </div>
-                <div class = "skill-desc">
-                    I can this ;) , I've fucked that
-                    I've even fucked a school girl's twat
+
+                <div class = "service-item">
+                    <div class = "service-title">
+                        Eazy To Customize
+                    </div>
+                    <div class = "service-desc">
+                        The best way to excel over other projects is to make your site unique and creative.
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id = "about">
-        <div class = "about-container">
-            <div class = "about-title">
+    <section id = "about" class = "container-fluid">
+        <div class = "container d-flex ai-center text-center flex-col">
+            <div class = "about-smth">
+                Something
+            </div>
+            <div class = "about-title text-uppercase">
                 About me
-                <div class = "about-hr-first"></div>
-                <div class = "about-hr-second"></div>
             </div>
-            <div class = "about-desc">
-                The name’s POLEHA. I am a tireless seeker of knowledge, occassional purveyor of wisdom and also, coincidentally, a web designer.
-            </div>
-            <div class = "about-title">
-                <i class = "fa fa-graduation-cap"></i>PHILOSOPHY
-            </div>
-            <div>
-                In as circuitous a reason as a philosopher is wont to offer, my school of thought is reliant on schooling my thought – thoroughly, regularly; keeping abreast of design, branding, advertising trends and solutions.
+            <div class = "about-main">
+                    Hi! My name is Polina Rubtsova. <br>
+                    I’m a UI/UX designer, based in Dnipro,Ukrain. <br>
+                    I loves clean, simple and unique design. <br>
+                    I also enjoy crafting brand identities, <br>
+                    icon and illustration works. <br>
             </div>
         </div>
     </section>
 
-    <section id = "contact">
-        VOT TUT TEXT KAKOITO YA HZ
+    <section id = "portfolio" class = "container-fluid">
+        <div class = "container">
+            <div class = "p-title text-center">
+                MY WORKS
+            </div>
+
+            <div class = "d-flex ai-center">
+                <div class = "prevArrow">
+                    <img src = "img/arrow.png">
+                </div>
+                <div class = "portf-slider">
+                    <div class = "slider-item">
+                        <img src = "img/p-item.png">
+                    </div>
+                    <div class = "slider-item">
+                        <img src = "img/p-item.png">
+                    </div>
+                    <div class = "slider-item">
+                        <img src = "img/p-item.png">
+                    </div>
+                    <div class = "slider-item">
+                        <img src = "img/p-item.png">
+                    </div>
+                    <div class = "slider-item">
+                        <img src = "img/p-item.png">
+                    </div>
+                </div>
+                <div class = "nextArrow">
+                    <img src = "img/arrow.png" class = "r">
+                </div>
+            </div>
+        </div>
     </section>
-</body>
+
+    <section id = "freelance" class = "container-fluid">
+        <div class = "container d-flex flex-col jc-center ai-center">
+            <div class = "f-title">
+                I’m also avalible for freelance work
+            </div>
+
+            <div class = "f-button">
+                <a href = "#contact">
+                    Contact me
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section id = "contact" class = "container-fluid">
+        <form action="https://formspree.io/your@email.com" method="POST">
+        <div class = "d-flex flex-col jc-center ai-center text-center contact-container">
+                <div class = "contact-title text-uppercase">
+                    Contact me
+                </div>
+
+                <div class = "contact-c d-flex flex-col">
+                    <div class = "d-flex ai-center jc-center">
+                        <img src = "img/phone.png"> 8063-473-82-99
+                    </div>
+                    <div class = "d-flex ai-center jc-center">
+                        <img src = "img/envelop.png"> sweet.dnepr@gmail.com
+                    </div>
+                </div>
+
+                <div class = "contact-or text-uppercase">
+                    or
+                </div>
+
+                <div class = "inputs">
+                    <div class = "input-item">
+                        <input placeholder="Your name" title = "Your name" name = "name">
+                    </div>
+                    <div class = "input-item">
+                        <input placeholder="Your e-mail" title = "Your e-mail" type = "email" name = "email">
+                    </div>
+                    <div class = "input-item">
+                        <textarea placeholder="Your message" rows = "3" name = "text"></textarea>
+                    </div>
+                </div>
+
+                <button class = "c-btn ml-auto text-uppercase">
+                    Send
+                </button>
+        </div>
+        </form>
+    </section>
+
+    <footer class = "container-fluid">
+        <div class = "container d-flex jc-around text-uppercase">
+            <div class = "footer-item">
+                <a href = "#">
+                    Facebook
+                </a>
+            </div>
+            <div class = "footer-item">
+                <a href = "#">
+                    Dribble
+                </a>
+            </div>
+            <div class = "footer-item">
+                <a href = "#">
+                    Instagram
+                </a>
+            </div>
+            <div class = "footer-item">
+                <a href = "#">
+                    Behance
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    </body>
 </html>
-
-<script src = "js/colors.js"></script>
-
