--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section id = "contact" class = "container-fluid">
-        <form action="https://formspree.io/your@email.com" method="POST">
+        <form action="https://formspree.io/singularity123097@gmail.com" method="POST">
         <div class = "d-flex flex-col jc-center ai-center text-center contact-container">
                 <div class = "contact-title text-uppercase">
                     Contact me
